--- a/kur.css
+++ b/kur.css
@@ -91,9 +91,9 @@ header{
 
 .aside-prof h2{
     display: flex;
-    justify-content: center;
     padding: 50px;
     margin-right: 50px;
+    margin-left: 500px;
 }
 
 .aside-prof h2{
