--- a/kur.css
+++ b/kur.css
@@ -89,12 +89,11 @@ header{
     /* margin-left: 500px; */
 }
 
-.aside-prof h2{
+/* .aside-prof {
     display: flex;
     padding: 50px;
-    margin-right: 50px;
-    margin-left: 500px;
-}
+    margin-left: 100px;
+} */
 
 .aside-prof h2{
     font-size: 30px;
