--- a/kur.css
+++ b/kur.css
@@ -72,7 +72,7 @@ header{
     padding-top: 10px;
     margin-left: 50px;
     border-radius: 50px;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .content-article1 p{
