--- a/kur.css
+++ b/kur.css
@@ -117,7 +117,7 @@ header{
     display: flex;
     margin-left: 300px;
     border-radius: 50px;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .karir{
@@ -181,7 +181,7 @@ header{
     padding-top: 50px;
 }
 
-@media screen and (max-width:500px) {
+@media screen and (max-width:768px) {
 
     .aside-prof{
         
