--- a/kur.css
+++ b/kur.css
@@ -12,7 +12,7 @@ html{
 }
 
 body{
-    height: 100vh;
+    /* height: 100vh; */
     background-color: #000;
     color: #fff; ;
     width: 100%;
@@ -72,7 +72,7 @@ header{
     padding-top: 10px;
     margin-left: 50px;
     border-radius: 50px;
-    /* height: 100%; */
+    height: 100%;
 }
 
 .content-article1 p{
@@ -117,7 +117,7 @@ header{
     display: flex;
     margin-left: 300px;
     border-radius: 50px;
-    /* height: 100%; */
+    height: 100%;
 }
 
 .karir{
